k8sファイル追加, index.html修正

--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,7 @@
   </head>
   <body>
     <div>
-      <a href="/other1.html">other1</a>
-      <a href="/sub/other2.html">other2</a>
+      <h1>Hello World!</h1>
     </div>
   </body>
 </html>
